Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24502

Qt Creator loses information about the CMake executable used to configure a build folder if that executable is not in the system path

    XMLWordPrintable

Details

    • 795ccfbffca2f338a3c9918b8d339848f16b2f3c (qt-creator/qt-creator/master)

    Description

      Steps to reproduce:

      1. Install CMake into a custom location (not in the system path).
      2. Use that version of CMake to configure a project's build folder.
      3. Open that project's top-level CMakeLists.txt file in Qt Creator.

      BUG: the kit created by Qt Creator while importing the build folder is set to use the default CMake executable (e.g. /usr/bin/cmake) rather than the executable used in step 2.

      I believe this happens because the CMake project importer fails to register a temporary CMake tool corresponding to the CMake executable whose path is found in the build folder.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            puddleglum Wojciech Smigaj
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes