CMake: Register CMake tools detected while scanning build directories

Fixes: QTCREATORBUG-24502
Change-Id: Idf96e666e783edbf8b0fbe4216affb80b0464104
Reviewed-by: Cristian Adam <cristian.adam@qt.io>